--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,17 +1,22 @@
 doctype html
 html
-  head
-    title= title
+    head
+        title= title
 
     // Viewport mobile tag for sensible mobile support
     meta(name="viewport",content="width=device-width, initial-scale=1, maximum-scale=1")
 
     block styles
 
-  body
-    block body
+        body
+            if (session.authenticated)
+                span You logged in
+                a(href='/auth/destroy') Logout!!
+            if (!session.authenticated)
+                span Loggin first
+            block body
 
-    // The linker searches for this tag and adds js.  If there's no linker, we point to sails.io.js
+                // The linker searches for this tag and adds js.  If there's no linker, we point to sails.io.js
     // SCRIPTS
     script(src="/js/dependencies/sails.io.js")
     // SCRIPTS END
